Redeploy selenium app if deployment fail